[gd_scene load_steps=4 format=3 uid="uid://1ehrxx5avp2u"]

[ext_resource type="Script" path="res://scripts/ui/order_card.gd" id="1_ybp7j"]
[ext_resource type="Theme" uid="uid://bas6smt1iwb1f" path="res://themes/ui_theme.tres" id="2_pr0mi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wun7"]
bg_color = Color(1, 0.760784, 0.690196, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="OrderCard" type="Panel"]
custom_minimum_size = Vector2(200, 200)
offset_right = 135.0
offset_bottom = 134.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8wun7")
script = ExtResource("1_ybp7j")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.224
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -0.0160007

[node name="TimerBar" type="ProgressBar" parent="ColorRect"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.111
offset_bottom = 0.00300598
theme = ExtResource("2_pr0mi")
theme_type_variation = &"TimerBar"
step = 1.0
value = 100.0
show_percentage = false

[node name="FoodNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = 92.0
offset_right = 212.0
offset_bottom = 163.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "food name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 42.0
offset_right = 151.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "time"
horizontal_alignment = 1
